--- a/signup.html
+++ b/signup.html
@@ -3,49 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Signup Form</title>
-    </head>
+</head>
 <body>
-    <form action="success.html"></form>
-
     <div class="container">
-        <h2 class="text-center mt-5">Signup</h2>
         <div class="row justify-content-center">
-            <div class="col-md-6">
-                
-                <form id="signupForm" onsubmit="return validate()">
+            <div class="col-md-8">
+                <h1 class="text-center">Signup</h2>
+                <form id="signupForm">
                     <div class="form-group">
-                         <input type="text" placeholder="Username" id="username" required>
-                        <span id="error1" class="error"></span>
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="Enter username" required>
                     </div>
-                    <br>
                     <div class="form-group">
-                        <input type="email" placeholder="Email" id="email" required>
-                        <span id="error2" class="error"></span>
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                        <div class="invalid-feedback">
+                            Please enter a valid email address.
+                        </div>
                     </div>
-                    <br>
                     <div class="form-group">
-                        <input type="password" placeholder="Password" id="password" required>
-                        <span id="error3" class="error"></span>
-                        <div id="passwordStrength" class="password-strength"></div>
+                        <label for="phone">Phone Number</label>
+                        <input type="text" class="form-control" id="phone" placeholder="Enter phone number" required>
+                        <div class="invalid-feedback">
+                            Please enter a valid phone number (10 digits or formatted as XXX-XXX-XXXX, XXX.XXX.XXXX, XXX XXX XXXX).
+                        </div>
                     </div>
-                    <br>
                     <div class="form-group">
-                        <input type="tel" placeholder="Phone Number" id="phone" required>
-                        <span id="error4" class="error"></span>
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password" required>
+                        <small id="passwordHelp" class="form-text"></small>
                     </div>
-                    <br>
-                    <div>
-                        <button type="submit">Submit</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary">Signup</button>
                 </form>
             </div>
         </div>
     </div>
-
-   
-<script src="validation.js"></script>
-
+</h10>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="validation.js"></script>
 </body>
 </html>
